# templates

./: .gitignore  README.md
gtest/: .clang-format  CMakeLists.txt  README.md  installGTest.sh  main.cpp
gtest/source/: CMakeLists.txt  Module1.cpp  Module1.hpp  Module2.cpp  module1.cpp  module2.cpp  module2.hpp  util.cpp  util.hpp
gtest/test/: CMakeLists.txt  Test_Module1.cpp  Test_Module2.cpp  Test_Util.cpp  Test_module1.cpp  Test_module2.cpp
